--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
 </head>
 <body>
 Hello!
+
+<form th:action="@{/logout}" th:method="POST">
+    <input type="submit" th:value="Logout"/>
+</form>
 </body>
 </html>
